--- a/00_basicos.html
+++ b/00_basicos.html
@@ -158,6 +158,21 @@
     console.log(c + Number.parseFloat(d)); 
     
     */
+
+			/* **********    JavaScript: 8. Booleans  ********** */
+
+			/* let verdadero = true;
+    let falso = false;
+    let v = Boolean(true);
+    let f = Boolean(false);
+    console.log(verdadero, falso, v, f);
+    console.log(typeof verdadero, typeof falso);
+    console.log(Boolean(0));
+    console.log(Boolean(-7));
+    console.log(Boolean(""));
+    console.log(Boolean(" ")); 
+    
+    */
 		</script>
 	</body>
 </html>
