--- a/00_basicos.html
+++ b/00_basicos.html
@@ -173,6 +173,22 @@
     console.log(Boolean(" ")); 
     
     */
+
+			/* **********   JavaScript: 9. undefined, null & NaN   ********** */
+
+			//undefined indica que no se ha inicializado una variable y que el valor está ausente
+			/* let indefinida;
+    console.log(indefinida); */
+
+			//null es un valor especial que indica la ausencia de un valor
+			/* let nulo = null;
+    console.log(null); */
+
+			//NaN - Not a Number
+			/* let noEsUnNumero = "hola" * 3.7;
+    console.log(noEsUnNumero); 
+    
+    */
 		</script>
 	</body>
 </html>
