--- a/00_basicos.html
+++ b/00_basicos.html
@@ -575,6 +575,27 @@
     } 
     
     */
+
+			/* ********** JavaScript: 18. Destructuración  ********** */
+
+			/* const numeros = [1, 2, 3];
+    //Sin destructuración
+    let uno = numeros[0],
+      dos = numeros[1],
+      tres = numeros[2];
+    console.log(uno, dos, tres);
+    //Con destructuración
+    const [one, two, three] = numeros;
+    console.log(one, two, three);
+    const persona = {
+      nombre: "Jon",
+      apellido: "MirCha",
+      edad: 35
+    };
+    let { nombre, edad, apellido } = persona;
+    console.log(nombre, apellido, edad); 
+    
+    */
 		</script>
 	</body>
 </html>
