--- a/00_basicos.html
+++ b/00_basicos.html
@@ -645,6 +645,43 @@
     console.log(arr3); 
     
     */
+
+			/* ********** JavaScript: 21. Arrow Functions ********** */
+			/* const saludar = () => console.log(`Hola`);
+    saludar(); */
+
+			/* const saludar = nombre => console.log(`Hola ${nombre}`);
+    saludar("Irma");
+ */
+			/* const sumar = function (a, b) {
+      return a + b;
+    } */
+
+			/*  const sumar = (a, b) => a + b;
+     console.log(sumar(9, 9));
+     const funcionDeVariasLineas = () => {
+       console.log("Uno");
+       console.log("Dos");
+       console.log("Tres");
+     }
+     funcionDeVariasLineas();
+     const numeros = [1, 2, 3, 4, 5];
+     numeros.forEach((el, index) => console.log(`${el} esta en la posición ${index}`));
+  */
+			/*   function Perro() {
+        console.log(this);
+      }
+      Perro(); */
+
+			/*     const perro = {
+          nombre: "kenai",
+          ladrar() {
+            console.log(this)
+          }
+        }
+        perro.ladrar(); 
+        
+        */
 		</script>
 	</body>
 </html>
