Funciones Anónimas Autoejecutables

--- a/00_basicos.html
+++ b/00_basicos.html
@@ -1027,7 +1027,7 @@
 
        //Formas de escribir las funciones Anónimas Autoejecutables
 
-       //Clásica
+       //Clasica
 
        (function () {
          console.log('versión Clásica')
@@ -1043,7 +1043,7 @@
 
        +function () {
          console.log('versión Unaria')
-       }();
+       }(); 
 
        //Facebook
        
